fix fielddesigner dropDown alignament

--- a/frontend-service/src/ui/views/DatasetDesigner/_components/TabsDesigner/_components/FieldsDesigner/_components/FieldDesigner/FieldDesigner.module.css
+++ b/frontend-service/src/ui/views/DatasetDesigner/_components/TabsDesigner/_components/FieldsDesigner/_components/FieldDesigner/FieldDesigner.module.css
@@ -14,6 +14,9 @@
   width: 100%;
   cursor: grab;
 }
+.draggableFieldDiv :global .p-dropdown {
+  align-self: center;
+}
 
 .draggableFieldDiv:active {
   cursor: grabbing;
